--- a/client/views/partials/admin/customers/restOfAll.html
+++ b/client/views/partials/admin/customers/restOfAll.html
@@ -14,15 +14,17 @@
             </select>
         </li>
         <li class="col-xs-4 pull-right">
-
             <form role="search">
                 <div class="input-group add-on">
-                    <input type="text" class="form-control" placeholder="Search" name="srch-term" id="srch-term" ng-model="junkLeadSearch1">
-                    <div class="input-group-btn" ng-click="initRestOfAll('', junkLeadSearch1);">
-                        <button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
+                    <input type="text" class="form-control" placeholder="Search" name="srch-term" id="srch-term"
+                           ng-model="junkLeadSearch1" ng-change="initRestOfAll('', junkLeadSearch1);">
+                    <div class="input-group-btn">
+                        <button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i>
+                        </button>
                     </div>
                 </div>
             </form>
+        </li>
 
         <div class="clearfix"></div>
     </ul>
