--- a/client/views/partials/admin/customers/transporters.html
+++ b/client/views/partials/admin/customers/transporters.html
@@ -13,11 +13,14 @@
             </select>
         </li>
         <li class="col-xs-4 pull-right">
-            <div class="input-group">
-                <input type="text" class="form-control" placeholder="Search" ng-model="transporter1">
-                <span class="input-group-addon" ng-click="searchByTransporter(transporter1);"><i
-                        class="glyphicon glyphicon-search"></i></span>
-            </div>
+            <form role="search">
+                <div class="input-group add-on">
+                    <input type="text" class="form-control" placeholder="Search" name="srch-term" id="srch-term" ng-model="transporter1" ng-change="searchByTransporter(transporter1);">
+                    <div class="input-group-btn">
+                        <button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
+                    </div>
+                </div>
+            </form>
         </li>
         <div class="clearfix"></div>
     </ul>
