--- a/client/views/partials/admin/customers/truckOwners.html
+++ b/client/views/partials/admin/customers/truckOwners.html
@@ -14,8 +14,8 @@
         <li class="col-xs-4 pull-right">
             <form role="search">
                 <div class="input-group add-on">
-                    <input type="text" class="form-control" placeholder="Search" name="srch-term" id="srch-term" ng-model="truckOwnerSearch">
-                    <div class="input-group-btn" ng-click="initTruckOwner('', truckOwnerSearch);">
+                    <input type="text" class="form-control" placeholder="Search" name="srch-term" id="srch-term" ng-model="truckOwnerSearch" ng-change="initTruckOwner('', truckOwnerSearch);">
+                    <div class="input-group-btn">
                         <button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
                     </div>
                 </div>
