--- a/client/views/partials/admin/services/deviceManagement.html
+++ b/client/views/partials/admin/services/deviceManagement.html
@@ -1,11 +1,15 @@
 <div ng-controller="deviceManagementCrtl">
     <ul class="list-inline title-ul">
         <li class="pull-left name-head">Device Management</li>
-        <li class="col-xs-3">
-            <div class="input-group">
-                <input type="text" class="form-control" placeholder="Search" ng-model="searchString" ng-change="init()">
-                <span class="input-group-addon"><i class="glyphicon glyphicon-search"></i></span>
-            </div>
+        <li class="col-xs-4 pull-right">
+            <form role="search">
+                <div class="input-group add-on">
+                    <input type="text" class="form-control" placeholder="Search" name="srch-term" id="srch-term" ng-model="searchString" ng-change="init();">
+                    <div class="input-group-btn">
+                        <button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
+                    </div>
+                </div>
+            </form>
         </li>
         <div class="clearfix"></div>
     </ul>
