--- a/client/views/partials/admin/services/erpAccounts.html
+++ b/client/views/partials/admin/services/erpAccounts.html
@@ -1,13 +1,7 @@
 <div ng-controller="accountsListCrtl">
     <ul class="list-inline title-ul">
         <li class="pull-left name-head">ERP Accounts</li>
-        <li class="col-xs-3">
-            <div class="input-group">
-                <input type="text" class="form-control" placeholder="Search" ng-model="searchString" ng-change="init()">
-                <span class="input-group-addon"><i class="glyphicon glyphicon-search"></i></span>
-            </div>
-        </li>
-        <li class="pull-right col-xs-2">
+        <li class="pull-right col-xs-3">
             <select class="form-control" ng-model="sortableString" ng-change="init()">
                 <option selected value="">Select</option>
                 <option value="">Trucks</option>
@@ -18,6 +12,18 @@
                 <option value="statusEnabled">Status Enabled</option>
                 <option value="statusDisbled">Status Disbaled</option>
             </select>
+        </li>
+        <li class="col-xs-4 pull-right">
+            <form role="search">
+                <div class="input-group add-on">
+                    <input type="text" class="form-control" placeholder="Search" name="srch-term" id="srch-term"
+                           ng-model="searchString" ng-change="init();">
+                    <div class="input-group-btn">
+                        <button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i>
+                        </button>
+                    </div>
+                </div>
+            </form>
         </li>
         <div class="clearfix"></div>
     </ul>
