--- a/client/views/partials/admin/services/gpsDevices.html
+++ b/client/views/partials/admin/services/gpsDevices.html
@@ -1,14 +1,6 @@
 <div ng-controller="DeviceCtrl">
     <ul class="list-inline title-ul">
-        <li class="pull-left name-head">GPS Device
-            <Accounts></Accounts>
-        </li>
-        <li class="col-xs-3">
-            <div class="input-group">
-                <input type="text" class="form-control" placeholder="Search" ng-model="searchString" ng-change="init()">
-                <span class="input-group-addon"><i class="glyphicon glyphicon-search"></i></span>
-            </div>
-        </li>
+        <li class="pull-left name-head">GPS Device</li>
         <li class="pull-right">
             <button class="btn btn-success" ng-click="assignDevicesModal()">Assign Devices</button>
         </li>
@@ -23,6 +15,18 @@
                 <option value="active">Active</option>
                 <option value="inactive">Inactive</option>
             </select>
+        </li>
+        <li class="col-xs-4 pull-right">
+            <form role="search">
+                <div class="input-group add-on">
+                    <input type="text" class="form-control" placeholder="Search" name="srch-term" id="srch-term"
+                           ng-model="searchString" ng-change="init();">
+                    <div class="input-group-btn">
+                        <button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i>
+                        </button>
+                    </div>
+                </div>
+            </form>
         </li>
         <div class="clearfix"></div>
     </ul>
