--- a/client/views/partials/admin/services/payments.html
+++ b/client/views/partials/admin/services/payments.html
@@ -1,24 +1,31 @@
 <div ng-controller="paymentCrtl">
     <ul class="list-inline title-ul">
         <li class="pull-left name-head">Payments</li>
-        <li class="col-xs-3">
-            <div class="input-group">
-                <input type="text" class="form-control" placeholder="Search" ng-model="searchString" ng-change="init()">
-                <span class="input-group-addon"><i class="glyphicon glyphicon-search"></i></span>
-            </div>
-        </li>
-        <li class="pull-right col-xs-2">
+        <li class="pull-right col-xs-3">
             <select class="form-control" ng-model="type" ng-change="init()">
-                <option selected value="">Select</option>
+                <option value="" selected>--Select--</option>
                 <option value="erp">ERP Service</option>
                 <option value="gps">GPS Service</option>
                 <option value="both">Both the services</option>
                 <!--<option>Payment pending</option>-->
             </select>
         </li>
+        <li class="col-xs-4 pull-right">
+            <form role="search">
+                <div class="input-group add-on">
+                    <input type="text" class="form-control" placeholder="Search" name="srch-term" id="srch-term"
+                           ng-model="searchString" ng-change="init();">
+                    <div class="input-group-btn">
+                        <button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i>
+                        </button>
+                    </div>
+                </div>
+            </form>
+        </li>
         <div class="clearfix"></div>
     </ul>
-    <table class="table table-bordered table-striped table-condensed table-hover ng-table-responsive" ng-table="accountParams">
+    <table class="table table-bordered table-striped table-condensed table-hover ng-table-responsive"
+           ng-table="accountParams">
         <tr ng-repeat="payment in currentPageOfAccounts" style="text-align: center;">
             <td data-title="'S No'">
                 {{$index+1}}
@@ -37,7 +44,6 @@
             </td>
             <td data-title="'ERP Reg Date'" sortable="'payment.erpDate'" class="clickable-item">
                 {{payment.erpDate  | date:'dd/MM/yyyy'}}
-            </td>
             <td data-title="'ERP'" sortable="'payment.erpEnabled'" class="clickable-item">
                 {{payment.erpEnabled}}
             </td>
