--- a/client/views/partials/admin/orderProcess/createLoadRequest.html
+++ b/client/views/partials/admin/orderProcess/createLoadRequest.html
@@ -26,7 +26,7 @@
                                        title="Customer *"  reset-search-input="false" >
 
                                 <ui-select-match placeholder="Customer *" class="form-control order-form-control">
-                                    {{$select.selected.userName || userName}}
+                                    {{$select.selected.firstName || firstName}}
                                 </ui-select-match>
                                 <ui-select-choices
                                         repeat="truck in truckOwnersList "  refresh="searchAccountOwner($select.search)" refresh-delay="0"  scroll-detector="loadMore()" >
@@ -43,8 +43,8 @@
                     </div>
                     <div class="col-xs-12 col-sm-6" ng-show="loadRequest.customerType=='UnRegistered' ">
                         <div class="form-group styling-input-list">
-                            <input type="text" class="form-control custom-form-control" name="fullName"
-                                   ng-model="loadRequest.name"/>
+                            <input type="text" class="form-control custom-form-control" name="firstName"
+                                   ng-model="loadRequest.firstName"/>
                             <label class="focus-effect-for-input">Full Name*</label>
                         </div>
                     </div>
@@ -53,7 +53,7 @@
                     <div class="col-xs-12 col-sm-6">
                         <div class="form-group styling-input-list">
                             <input type="text" class="form-control custom-form-control" name="mobile"
-                                   ng-model="loadRequest.contactPhone[0]"/>
+                                   ng-model="loadRequest.contactPhone"/>
                             <label class="focus-effect-for-input">Mobile*</label>
                         </div>
                         <div class="form-group styling-input-list">
@@ -69,7 +69,7 @@
                     </div>
                     <div class="col-xs-12 col-sm-6">
                         <div class="form-group styling-input-list">
-                            <input type="text" class="form-control custom-form-control" name="fullName"
+                            <input type="text" class="form-control custom-form-control" name="email"
                                    ng-model="loadRequest.email"/>
                             <label class="focus-effect-for-input">Email</label>
                         </div>
@@ -98,7 +98,7 @@
                     <button class="btn btn-primary btn-sm" ng-click="addTruckDetails()">Add</button>
                 </div>
 
-                <div class="row pos-relative top-border" ng-repeat="load in loadRequest.truckDetails">
+                <div class="row pos-relative top-border" ng-repeat="load in loadRequest.truckDetails track by $index">
                     <span class="plus-pos" ng-show="$index>0" style="top:-5px; right:-5px;"> <i
                             class="fa fa-times-circle clr-red" ng-click="removeTruckDetails($index)"></i></span>
                     <div class="col-xs-12 col-sm-3">
@@ -108,10 +108,10 @@
                                    ng-change="addSearchSource($index)"/>
                             <label class="order-effect-for-input">Source *</label>
                         </div>
-                        <div class="form-group pos-relative styling-input-list" ng-repeat="destination in load.destination">
+                        <div class="form-group pos-relative styling-input-list" ng-repeat="destination in load.destination track by $index">
                             <div class="form-group styling-input-list">
                                 <input type="text" class="form-control custom-form-control" name="destination"
-                                       ng-model="destination.destinationAddress" id="searchDestination{{$index}}"
+                                       ng-model="destination.destinationAddress" id="searchDestination{{$parent.$index}}{{$index}}"
                                        ng-change="addSearchDestination($parent.$index,$index)"/>
                                 <label class="focus-effect-for-input">Destination *</label>
                             </div>
@@ -125,7 +125,7 @@
                                    ng-click="deleteDestinationAndPrice($parent.$index,$index)"></i></span>
                             <span class="plus-pos" ng-show="$index == 0">
                                 <i class="fa fa-plus-square" aria-hidden="true"
-                                   ng-click="addDestinationAndPrice($index)"></i></span>
+                                   ng-click="addDestinationAndPrice($parent.$index,$index)"></i></span>
                         </div>
                     </div>
                     <div class="col-xs-12 col-sm-3">
@@ -162,8 +162,8 @@
                     </div>
                     <div class="col-xs-12 col-sm-3">
                         <div class="form-group styling-input-list">
-                            <input type="text" class="form-control order-form-control" name="comment"
-                                   ng-model="load.comment"/>
+                            <input type="text" class="form-control order-form-control" name="driverInfo"
+                                   ng-model="load.driverInfo"/>
                             <label class="order-effect-for-input">Driver Info / Comment</label>
                         </div>
                     </div>
