data table added truck request

--- a/client/views/adminIndex.html
+++ b/client/views/adminIndex.html
@@ -18,6 +18,8 @@
           href="components/angular-ui-notification/dist/angular-ui-notification.min.css">
     <link rel="stylesheet" href="components/angular-ui-select/dist/select.min.css">
     <link rel="stylesheet" href="components/lightbox2/dist/css/lightbox.min.css">
+    <link rel="stylesheet" type="text/css" href="components/datatables.net-dt/css/jquery.dataTables.min.css">
+    <link rel="stylesheet" type="text/css" href="components/datatables.net-responsive-dt/css/responsive.dataTables.min.css">
 
 </head>
 
@@ -98,6 +100,9 @@
 <script src="components/lightbox2/dist/js/lightbox.js"></script>
 <!--Routing adminApp.js File-->
 <script src="js/adminApp.js"></script>
+
+<script type="text/javascript" src="components/datatables.net/js/jquery.dataTables.min.js"></script>
+<script type="text/javascript" src="components/datatables.net-responsive/js/dataTables.responsive.min.js"></script>
 
 <!--Controllers-->
 <script src="js/modules/admin/adminLogin.js"></script>
