--- a/client/views/partials/admin/orderProcess/truckRequets.html
+++ b/client/views/partials/admin/orderProcess/truckRequets.html
@@ -1,4 +1,4 @@
-<div ng-controller="orderProcessCtrl" ng-init="getTruckRequests()">
+<div ng-controller="orderProcessCtrl" ng-init="numOfTruckRequest()">
     <ul class="list-inline title-ul">
         <li class="pull-left name-head">Truck Request</li>
         <li class="pull-right">
@@ -23,24 +23,18 @@
            ng-table="requestTruckParams">
         <tbody>
         <tr ng-repeat="truck in truckRequestsList">
-            <!--<td data-title="'S No'" class="col-sm-1">{{$index+1}}</td>-->
-            <td data-title="'Title'" sortable="'title'" class="clickable-item col-sm-1">
-                {{truck.title}}            </td>
-            <td data-title="'Customer Name'" sortable="'type'" class="clickable-item col-sm-1">
-                {{truck.customerName}}
-            </td>
-            <td data-title="'Type'" sortable="'mobile'" class="clickable-item col-sm-1">{{truck.leadType}}</td>
-            <td data-title="'Source'" sortable="'date'" class="clickable-item col-sm-1">{{truck.source}}</td>
-            <td data-title="'Destination'" sortable="'yes'" class="clickable-item col-sm-1">{{truck.destination}}</td>
-            <td data-title="'Truck Type'" sortable="'truckType'" class="clickable-item col-sm-1">{{truck.truckType.title}} - {{truck.truckType.tonnes}} Ton</td>
+            <td data-title="'S No'">{{$index+1}}</td>
+            <td data-title="'Title'" sortable="'title'" class="clickable-item">{{truck.title}}</td>
+            <td data-title="'Customer Name'" sortable="'type'" class="clickable-item">{{truck.customerName}}</td>
+            <td data-title="'Source'" sortable="'date'" class="clickable-item">{{truck.source}}</td>
+            <td data-title="'Destination'" sortable="'yes'" class="clickable-item">{{truck.destination}}</td>
+            <td data-title="'Truck Type'" sortable="'truckType'" class="clickable-item">{{truck.truckType.title}}</td>
             <!--<td data-title="'Goods Type'" sortable="'goodsType'" class="clickable-item col-sm-1">{{truck.goodsType}}</td>-->
-            <td data-title="'Estimated Price'" sortable="'goodsType'" class="clickable-item col-sm-1">
-                {{truck.expectedPrice}}
-            </td>
-            <td data-title="'Approved'" sortable="'load'" class="clickable-item col-sm-1">{{truck.load}}</td>
-            <td data-title="'Status'" sortable="'Status'" class="clickable-item col-sm-1">{{truck.status || 'NA'}}</td>
+            <td data-title="'Estimated Price'" sortable="'goodsType'" class="clickable-item">{{truck.expectedPrice}}</td>
+            <td data-title="'Approved'" sortable="'load'" class="clickable-item">{{truck.load}}</td>
+            <td data-title="'Status'" sortable="'Status'" class="clickable-item">{{truck.status || 'NA'}}</td>
 
-            <td data-title="'Action'" class="col-sm-1">
+            <td data-title="'Action'">
                 <a href="#" ui-sref="orderprocess.editTruckRequest({_id:truck._id})" class="edit_icon">
                     <span class="glyphicon glyphicon-pencil"></span>
                 </a>
