--- a/client/views/partials/gps/gpsReports.html
+++ b/client/views/partials/gps/gpsReports.html
@@ -1,29 +1,29 @@
-<div class="col-xs-12 gpsListView">
+<div class="col-xs-12 gpsListView" ng-controller="GpsCtrl">
     <div class="col-xs-12">
         <div class="lisk-block col-xs-12">
             <div class="col-xs-12">
                 <ul>
                     <li class="report"><h2>Reports</h2></li>
-                    <li>
+                    <li >
                         <div class="form-details">
-                            <date-picker class="'textfield'" ng-model="listView.fromDate"></date-picker>
+                            <date-picker class="'textfield'" ban-future="'banFutureDate'" ng-model="reportParams.startDate"></date-picker>
                         </div>
                     </li>
 
                     <li>
                         <div class="form-details">
-                            <date-picker class="'textfield br-one'" ng-model="listView.toDate"></date-picker>
+                            <date-picker class="'textfield br-one'" ban-future="'banFutureDate'" ng-model="reportParams.endDate"></date-picker>
                         </div>
                     </li>
 
                     <li class="go-sub">
-                        <button type="button" class="btn go">Go</button>
+                        <!--<button type="button" class="btn go">Go</button>-->
                     </li>
 
                     <li class="sea-wid">
                         <div class="search-box">
-                            <input type="text" class="form-control textfiled1" placeholder="search">
-                            <input type="button" class="sea-btn">
+                            <input type="text" class="form-control textfiled1" placeholder="Search by truck no">
+                            <input type="button" ng-click="getTruckReport()" class="sea-btn">
                         </div>
                         <div class="clearfix"></div>
                     </li>
@@ -41,19 +41,24 @@
             <div class="col-xs-12 mt-25">
                 <a ui-sref="devices" class="btn btn-info pull-right mb-10">Devices</a>
                 <table class="table table-bordered table-striped table-condensed table-hover" ng-table="partyParams">
-                    <tr style="text-align: center;">
-                        <td data-title="'Vehicle Num'" sortable="'partyName'" class="clickable-item col-sm-2">
+                    <tr style="text-align: center;" ng-repeat="report in truckReports">
+                        <td data-title="'Date & Time'" sortable="'partyName'" class="clickable-item col-sm-2">
                             <a href="#"></a>
-                            AP36AA3194
+                            {{report.createdAt |date : "dd/MM/y HH:mm"}}
                         </td>
-                        <td data-title="'Start Location'" sortable="'partyContact'" class="clickable-item col-sm-3">
-                            Hyderabad
+                        <td data-title="'Status'" sortable="'partyContact'" class="clickable-item col-sm-3">
+                            <span ng-show="report.isStopped">Stopped</span>
+                            <span ng-show="!report.isStopped && report.isIdle">Idle</span>
+                            <span ng-show="!report.isStopped && !report.isIdle">Moving</span>
                         </td>
-                        <td data-title="'End Location'" sortable="'totalFright'" class="clickable-item col-sm-3">
-                            Chennai
+                        <td data-title="'Address'" sortable="'totalFright'" class="clickable-item col-sm-3">
+                            {{report.address}}
                         </td>
-                        <td data-title="'Distance Travelled'" sortable="'totalPayment'" class="clickable-item col-sm-3">
-                            820
+                        <td data-title="'Speed Km/hr'" sortable="'totalPayment'" class="clickable-item col-sm-3">
+                            {{report.speed}}
+                        </td>
+                        <td data-title="'Odo Km/hr'" sortable="'totalPayment'" class="clickable-item col-sm-3">
+                            NA
                         </td>
                     </tr>
                     <!-- <tr ng-if="!parties || parties.length === 0">
